force-app/main/default/objects/PageLog__c/PageLog__c.object-meta.xml
<CustomObject>
    <label>PageLog</label>
    <nameField>
        <label>PageLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PageLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>