force-app/main/default/objects/PageLog__c/fields/LogId__c.field-meta.xml
<CustomField>
    <fullName>LogId__c</fullName>
    <label>LogId</label>
    <type>AutoNumber</type>
</CustomField>