force-app/main/default/objects/PageLog__c/fields/Page_Accessed_time__c.field-meta.xml
<CustomField>
    <fullName>Page_Accessed_time__c</fullName>
    <label>Page Accessed time</label>
    <length>250</length>
    <type>Text</type>
</CustomField>