force-app/main/default/objects/PageLog__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <label>PageName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>